 - Added: Shortcuts text for all the ease-of-use tricks you can do to speed up use of the program; access via the About window.
 - Fixed: Kyurem/Aegislash stats (thanks Pkmnninja!)
 - Added: PSS Sprite changing (thanks SciresM for implementing!)
 - Changed: Diancie sprite now uses the ORAS version.
 - Added: Chinese translation.
 - Fixed: Full Pokedex code causing CyberGadget to corrupt saves.
 - Fixed: Corruption Alert will now appear for ORAS saves, you can ignore it if you are using SaveDataFiler.

12/16/14 - New Update: (810)
 - Added: Fully translatable interface capability.
 --- Use lang_en.txt for the basis of your translation, as it has a consice list of every control that you can translate.
 --- Window titles are translatable too; change the existing title within the translation file.
 - Added: Hall of Fame Editor. Thank you SciresM for the implementation!
 - Added: Country / Region text for all languages. Thank you Slashmolder for the raw data!
 - Added: Ingame Font characters. To manually enter them, right click the Nickname label. Thank you mapaler (枫谷剑仙)!
 - Changed: Replaced the Quick-Dragouts for exporting with an overall 'tabs' sprite. Functionality is the same; for encrypted export hold Control.
 - Changed: A few O-Power labels for X/Y. Thank you RainThunder!
 - Internal: Tons of code reorganization, might be a little faster/lighter.
 - Improved: Box Report now is more verbose in terms of Locations and sprites. Can also sort (slow) by clicking the column header, and upon exit you can save a .csv table.
 - Improved: Message popups should be much more appealing.
 - Fixed various bugs for drag&drop.

12/17/14 - New Update:
 - Fixed: DexNav levels saving to species-1.
 - Fixed: EXP growth accessing the wrong exp table.
 - Fixed: Dragout sprite update triggering errors.
 - Changed: Gen4 Encounter Type will only appear for Pokemon that originate from Gen 4.
 - Fixed: Some item sprites.